--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "react-time",
-  "version": "4.2.0",
+  "version": "4.3.0",
   "description": "react component for rendering formatted timestamps",
   "main": "lib/index.js",
   "eslintConfig": {
     "extends": "prometheusresearch"
   },
   "peerDependencies": {
-    "react": ">=0.13.0 <16.0.0",
+    "react": ">=15.4.0 <16.0.0",
     "moment": "^2.8.3"
+  },
+  "dependencies": {
+    "prop-types": "^15.5.7"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
@@ -19,9 +22,8 @@
     "mocha": "^2.4.5",
     "moment": "^2.8.3",
     "power-assert": "^1.3.1",
-    "prop-types": "^15.5.8",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0"
   },
   "repository": {
     "type": "git",
