--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-time",
+  "name": "tt-react-time",
   "version": "4.3.0",
   "description": "react component for rendering formatted timestamps",
   "main": "lib/index.js",
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/andreypopp/react-time.git"
+    "url": "git://github.com/mwolson/react-time.git"
   },
   "homepage": "https://github.com/andreypopp/react-time",
   "keywords": [
